--- a/css/productlist.css
+++ b/css/productlist.css
@@ -1,14 +1,11 @@
-.grid1-1-1{
-    display: grid;
-    grid-column: 1fr 1fr 1fr;
+
+
+
+.page-name{
+    grid-column: -1/-3;
+    grid-row: 2;
+  
 }
-
-.grid1-1-1 h1{
-    grid-column: 1/-1;
-}
-
-
-
 body{
     background-color: rgb(250, 239, 226);
 }
@@ -31,6 +28,11 @@ h1{
     font-family: "playfair_regular" ;
 
 }
+h3{
+    text-align: left;
+    font-family: sans-serif;
+    font-weight: 100;
+}
 
 
 li{
@@ -46,13 +48,13 @@ h2{
 
 }
 
+
+
 /* sold out */
 
 .sold-out::before {
     content: "Sold Out";
     position: absolute;
-    top: -10;
-    left: 10;
     background-color: rgb(158, 160, 180);;
     color: white;
     padding: 15px;
@@ -65,16 +67,34 @@ h2{
 }
 
 
-.sale::before {
-    content: "Sale";
-    position: absolute;
-    top: -10;
-    left: 10;
-    background-color: red;
+.sale {
+    background-color: rgb(215, 20, 20);
     color: white;
-    padding: 15px;
-    z-index: 2;
+    padding: 0.5vw;  
+  
 }
+
+
+article{
+    margin-left: 6vw;
+    margin-right: 6vw;
+    padding: 0;
+
+}
+
+.grid1-1{
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+}
+
+.productname{
+    grid-column: 1/-1;
+    grid-row: 1;
+}
+
+
+
+
 
 
 
