line-through old price

--- a/css/productlist.css
+++ b/css/productlist.css
@@ -89,12 +89,16 @@ article{
     display: grid;
     grid-template-columns: 1fr 1fr;
     justify-items: start;
-    row-gap: 2px;
 }
 
 .productname{
     grid-column: 1/-1;
     grid-row: 1;
+}
+
+.line-through{
+    text-decoration: line-through;
+
 }
 
 
