--- a/css/style.css
+++ b/css/style.css
@@ -102,4 +102,11 @@ img{
 }
 
 
+@font-face {
+    font-family: 'playfair_regular';
+    src: url('../fonts/playfairdisplay-variablefont_wght-webfont.woff2') format('woff2'),
+         url('../fonts/playfairdisplay-variablefont_wght-webfont.woff2') format('woff');
+    font-weight: normal;
+    font-style: normal;
+}
 
