--- a/css/productlist.css
+++ b/css/productlist.css
@@ -2,10 +2,21 @@
 
 
 .page-name{
-    grid-column: -1/-3;
-    grid-row: 2;
+    text-align: center;
+    font-family:sans-serif;
+    color: rgb(14, 14, 186);
+    font-size: 3vw;
+    text-align: center;
   
 }
+
+.brandname{
+    color: rgb(255, 113, 18);
+    text-align: left;
+    margin-left: 5vw;
+}
+
+
 body{
     background-color: rgb(250, 239, 226);
 }
@@ -20,14 +31,7 @@ a{
     color: black;
     text-decoration: none;
 }
-h1{
-    font-family:sans-serif;
-    color: rgb(14, 14, 186);
-    font-size: 3vw;
-    text-align: center;
-    font-family: "playfair_regular" ;
 
-}
 h3{
     text-align: left;
     font-family: sans-serif;
@@ -43,13 +47,7 @@ li{
     font-size: 1.2vw;
 }
 
-h2{
-    font-family:sans-serif;
-    color: rgb(0, 0, 8);
-    font-size: 1vw;
-    font-family: "playfair_regular" ;
 
-}
 
 
 
