--- a/css/layout.css
+++ b/css/layout.css
@@ -31,6 +31,7 @@ li a:hover {
     grid-template-columns: 1fr 1fr 1fr;
     gap: 1em;
     justify-items: center;
+    row-gap: 5vw;
     margin: 0;
     width: 100%;
 }
